[package]
name = "pyroscope"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "pyroscope"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.2.0", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.4"
libduckdb-sys = { version = "1.2.0", features = ["loadable-extension"] }
lazy_static = "1.4"
pyroscope = "0.5.4"
pyroscope_pprofrs = "0.2"
